// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryTabs should change the selected item on tab click 1`] = `
<Content
  name="two"
>
  <div>
    two
  </div>
</Content>
`;

exports[`HistoryTabs should change the selected item on tab click 2`] = `
<Content
  name="three"
>
  <div>
    three
  </div>
</Content>
`;

exports[`HistoryTabs should render correctly 1`] = `
<Fragment>
  <EuiTabs
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={false}
      key="/one--0"
      onClick={[Function]}
    >
      One
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={true}
      key="/two--1"
      onClick={[Function]}
    >
      Two
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="/three--2"
      onClick={[Function]}
    >
      Three
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="l"
  />
  <Route
    key="/one"
    path="/one"
    render={[Function]}
  />
  <Route
    key="/two"
    path="/two"
    render={[Function]}
  />
  <Route
    key="/three"
    path="/three"
    render={[Function]}
  />
</Fragment>
`;
